--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,21 @@
   "description": "Portfolio Tracking",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix ui",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "data:import": "node datainput",
+    "data:destroy": "node datainput -d"
   },
   "author": "Samad Khan",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.13"
+    "mongoose": "^5.12.13",
+    "nodemon": "^2.0.7"
   }
 }
