--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Portfolio Tracking",
   "main": "app.js",
   "scripts": {
-    "start": "node app",
-    "server": "nodemon app",
+    "start": "node backend/app",
+    "server": "nodemon backend/app",
     "client": "npm start --prefix ui",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node datainput",
@@ -14,11 +14,13 @@
   "author": "Samad Khan",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.12.13",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.13"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.6"
   }
 }
