--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon backend/app",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix frontend"
+    "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build"
   },
   "author": "Samad Khan",
   "license": "ISC",
